--- a/src/App.css
+++ b/src/App.css
@@ -36,6 +36,13 @@
     length : 100px;
 
 }
+.result{
+    color:green;
+}
+.CSR{
+    color:red;
+    padding-bottom: 0.1em;
+}
 .text{
     padding:10em;
 }
@@ -43,6 +50,21 @@
     background-color : #5858FA;
     height : 2.6em;
      align-self: center;
+}
+.body{
+    align-items:  left;
+    color: gray;
+    align-content: left;
+    text-align: left;
+     padding-left: 2em;
+
+}
+.Title{
+    font-size: 50;
+    text-align: left;
+    padding-left: 2em;
+
+
 }
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
